--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%); */
 
-	height: 90%;
+	min-height: 90%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
